--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Genos:ital,wght@0,100..900;1,100..900&display=swap&#39;);
 
 :root{
-    --bg-color: #4379F2;
-    --primary-color: #FFEB00;
-    --secondary-color: #117554;
+    --bg-color: #9dbcff;
+    --primary-color: #ca7aff;
+    --secondary-color: #87ffd7;
     --tipo-fonte: "Genos", sans-serif;
 
 }
